feat: 增加cpp awk

--- a/config.yaml
+++ b/config.yaml
@@ -26,6 +26,7 @@ params:
   favicon: favicon.ico
   highlightjsCDN: //cdnjs.cloudflare.com/ajax/libs
   highlightjsLang:
+    - awk
     - bash
     - c
     - c++
