--- a/config.yaml
+++ b/config.yaml
@@ -15,10 +15,15 @@ permalinks:
   post: /:year/:month/:day/:slug/
 menu:
   main:
+    - name: 重学基础
+      url: /re-learning-cs/
+      weight: 1
     - name: About
       url: /about/
+      weight: 2
     - name: GitHub
       url: https://github.com/qiaoin
+      weight: 3
 params:
   MathJaxCDN: //cdnjs.cloudflare.com/ajax/libs
   MathJaxVersion: 2.7.5
