--- a/config.yaml
+++ b/config.yaml
@@ -18,12 +18,15 @@ menu:
     - name: 重学基础
       url: /re-learning-cs/
       weight: 1
+    - name: Readings
+      url: /readings/
+      weight: 2
     - name: About
       url: /about/
-      weight: 2
+      weight: 3
     - name: GitHub
       url: https://github.com/qiaoin
-      weight: 3
+      weight: 4
 params:
   MathJaxCDN: //cdnjs.cloudflare.com/ajax/libs
   MathJaxVersion: 2.7.5
