--- a/config.yaml
+++ b/config.yaml
@@ -58,8 +58,8 @@ params:
     height: 50
     url: logo.png
     width: 50
-  utteranc:
+  giscus:
     enable: true
-    repo: "qiaoin/hugo-blog-comments" # 存储评论的Repo，格式为 owner/repo
-    issueTitle: "og:title"            # 表示你选择以那种方式让github issue的评论和你的文章关联可以选择默认的pathname。
-    theme: "github-light"             # 样式主题
+    repo: "qiaoin/qiaoin.github.io"  # 当前项目，使用 Discussions 作为评论系统
+    mappingType: "pathname"          # 页面与嵌入的 discussion 之间的映射关系
+    theme: "light"                   # 样式主题
